# stream-bridge-benchmark

./: .gitignore  README.md
BaseLine/: CMakeLists.txt
BaseLine/Classes/: CMakeLists.txt  class1.cpp  class1.h  class10.cpp  class100.cpp  class11.cpp  class11.h  class12.cpp  class12.h  class13.cpp  class13.h  class14.cpp  class14.h  class15.cpp  class16.cpp  class17.cpp  class18.cpp  class18.h  class19.cpp  class2.cpp  class20.cpp  class20.h  class21.cpp  class22.cpp  class22.h  class23.cpp  class24.cpp  class24.h  class25.cpp  class26.cpp  class27.cpp  class28.cpp  class28.h  class29.cpp  class3.cpp  class30.cpp  class30.h  class31.cpp  class32.cpp  class33.cpp  (+113 more)
GenerateFiles/: Cargo.toml
GenerateFiles/src/: main.rs
WithPCH/: CMakeLists.txt  precompiled.h
WithPCH/Classes/: class1.cpp  class10.cpp  class10.h  class100.cpp  class100.h  class11.cpp  class12.cpp  class13.cpp  class14.cpp  class15.cpp  class15.h  class16.cpp  class16.h  class17.cpp  class17.h  class18.cpp  class19.cpp  class19.h  class2.cpp  class2.h  class20.cpp  class21.cpp  class21.h  class22.cpp  class23.cpp  class23.h  class24.cpp  class25.cpp  class25.h  class26.cpp  class26.h  class27.cpp  class27.h  class28.cpp  class29.cpp  class29.h  class3.cpp  class3.h  class30.cpp  class31.cpp  (+108 more)
WithStreamBridge/: CMakeLists.txt  main.cpp
WithStreamBridge/Classes/: CMakeLists.txt  class1.cpp  class1.h  class10.cpp  class10.h  class100.cpp  class100.h  class11.cpp  class11.h  class12.cpp  class12.h  class13.cpp  class13.h  class14.cpp  class14.h  class15.cpp  class15.h  class16.cpp  class16.h  class17.cpp  class17.h  class18.cpp  class18.h  class19.cpp  class19.h  class2.cpp  class2.h  class20.cpp  class20.h  class21.cpp  class21.h  class22.cpp  class22.h  class23.cpp  class23.h  class24.cpp  class24.h  class25.cpp  class25.h  class26.cpp  (+161 more)
