set(MY_MODULE_SOURCES
    Class1.cpp
    Class2.cpp
    Class3.cpp
    Class4.cpp
    Class5.cpp
    Class6.cpp
    Class7.cpp
    Class8.cpp
    Class9.cpp
    Class10.cpp
    Class11.cpp
    Class12.cpp
    Class13.cpp
    Class14.cpp
    Class15.cpp
    Class16.cpp
    Class17.cpp
    Class18.cpp
    Class19.cpp
    Class20.cpp
    Class21.cpp
    Class22.cpp
    Class23.cpp
    Class24.cpp
    Class25.cpp
    Class26.cpp
    Class27.cpp
    Class28.cpp
    Class29.cpp
    Class30.cpp
    Class31.cpp
    Class32.cpp
    Class33.cpp
    Class34.cpp
    Class35.cpp
    Class36.cpp
    Class37.cpp
    Class38.cpp
    Class39.cpp
    Class40.cpp
    Class41.cpp
    Class42.cpp
    Class43.cpp
    Class44.cpp
    Class45.cpp
    Class46.cpp
    Class47.cpp
    Class48.cpp
    Class49.cpp
    Class50.cpp
    Class51.cpp
    Class52.cpp
    Class53.cpp
    Class54.cpp
    Class55.cpp
    Class56.cpp
    Class57.cpp
    Class58.cpp
    Class59.cpp
    Class60.cpp
    Class61.cpp
    Class62.cpp
    Class63.cpp
    Class64.cpp
    Class65.cpp
    Class66.cpp
    Class67.cpp
    Class68.cpp
    Class69.cpp
    Class70.cpp
    Class71.cpp
    Class72.cpp
    Class73.cpp
    Class74.cpp
    Class75.cpp
    Class76.cpp
    Class77.cpp
    Class78.cpp
    Class79.cpp
    Class80.cpp
    Class81.cpp
    Class82.cpp
    Class83.cpp
    Class84.cpp
    Class85.cpp
    Class86.cpp
    Class87.cpp
    Class88.cpp
    Class89.cpp
    Class90.cpp
    Class91.cpp
    Class92.cpp
    Class93.cpp
    Class94.cpp
    Class95.cpp
    Class96.cpp
    Class97.cpp
    Class98.cpp
    Class99.cpp
    Class100.cpp
)

add_library(Classes STATIC ${MY_MODULE_SOURCES})
target_include_directories(Classes PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
